
Slick 7.x-2.0-dev, 2014-11-20
-----------------------------
Fixed for arrows not properly updated on resize with responsive settings.
Updated slick_views typo "slick_wrapper" class into "slick-wrapper".

Slick 7.x-2.0-dev, 2014-11-15
-----------------------------
Issue #2375659 by jtwalters: Fixed dots do not work with breakpoints.

Slick 7.x-2.0-dev, 2014-11-14
-----------------------------
Offloaded dormant/optional functions into separate files:
  - includes/slick.extras.inc
  - includes/slick.admin.inc

Reorganized includes/slick.elements.inc file.
Simplified SLICK_VERSION to avoid chasing highly dynamic sub-minor releases.

Slick 7.x-2.0-dev, 2014-11-11
-----------------------------
Issue #2372923 by Adam.Brown: slick.theme.css overriding custom slick themes

Slick 7.x-2.0-dev, 2014-11-09
-----------------------------
Updated to Slick version 1.3.14:
  - Added respondTo, giving the ability to respond to slider width or window
    width, or the smaller of the two
  - Bumped the speed default to 500

Slick 7.x-2.0-dev, 2014-11-08
-----------------------------
Issue #2371205 by estebant: Expand the ternary operator for PHP < 5.3
  compatibility.

Slick 7.x-2.0-dev, 2014-11-05
-----------------------------
Added empty_option to all the Skins options. Now the Skin is optional.
  Skins defined by sub-modules fallback to the Skin defined at the optionset.
  Re-save existing Optionset to disable the skin at all.
Issue #2369129 by bjmiller121: Option for no skin to be loaded.

Slick 7.x-2.0-dev, 2014-10-31
-----------------------------
Removed slick.theme--extra.txt containing unused pure CSS arrows.
Updated and cleaned up gems and Sass files.

Slick 7.x-2.0-dev, 2014-10-30
-----------------------------
Added a new option: initialSlide introduced at Slick 1.3.12
Issue #2305949 by scottalan: Start carousel on specific item

Slick 7.x-2.0-dev, 2014-10-28
-----------------------------
Updated to Slick version 1.3.13: