@@ -50,12 +50,13 @@ body.page-admin {
   background-size: cover;
 }
 .slick-wrapper--fullscreen .slick--skin--fullscreen .slide__media img {
-  height: auto !important;
+  height: auto;
+  left: 0;
   margin: 0 auto;
-  max-height: 100%;
   min-height: 100%;
-  max-width: 100%;
+  min-width: 100%;
   position: absolute;
+  top: 0;
   width: 100%;
 }
 .slick-wrapper--fullscreen .slick--skin--fullscreen .slide__constrained {
