@@ -100,12 +100,8 @@
     }
 
     .slide--caption--bottom .slide__caption {
-      // bottom: 0;
-      // top: auto;
+      bottom: 0;
       @include transform(translateY(210px));
-    }
-
-    .slide--caption--below .slide__caption {
       min-height: 120px;
       position: relative;
       top: auto;
